// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Api wrapper functions Fetch Strategies 1`] = `
Object {
  "applicationName": "TEST",
  "shortName": "TEST",
  "strategy": Object {
    "applicationName": "Test Application",
    "shortName": "TestApp",
    "strategy": "INBOUND",
  },
}
`;

exports[`Test Api wrapper functions Fetch Strategies 2`] = `
Object {
  "applicationName": "TEST",
  "shortName": "TEST",
  "strategy": Object {
    "applicationName": "Test Application",
    "shortName": "TestApp",
    "strategy": "OUTBOUND",
  },
}
`;

exports[`Test Api wrapper functions Fetch Strategies 3`] = `
Object {
  "applicationName": "TEST",
  "shortName": "TEST",
  "strategy": Object {
    "applicationName": "Test Application",
    "shortName": "TestApp",
    "strategy": "NO-REFRESH",
  },
}
`;

exports[`Test Api wrapper functions Fetch Transitions 1`] = `
Object {
  "actionName": "sampleAction",
  "active": true,
  "eventType": "REFRESH_SUCCESS",
  "guid": "d7fe65c5-e233-50d1-e053-a065160af988",
  "lastUpdatedSource": "test Source",
  "lastUpdatedTimestamp": "2022-02-14T17:05:40.482+00:00",
  "lastUpdatedUserId": null,
  "nextStateName": "REFRESH_COMPLETED",
  "nextSuperStateName": "NONE",
  "stateName": "REFRESH_COMPLETED",
  "strategy": "INBOUND",
  "superStateName": "NONE",
  "tags": Array [
    Object {
      "name": "REFRESH_INBOUND_BAU",
    },
    Object {
      "name": "CASE_STRATEGY_BAU",
    },
  ],
  "version": 0,
}
`;

exports[`Test Api wrapper functions Fetch Transitions Tags 1`] = `"REFRESH_INBOUND_BAU"`;
